Fix: Center alignment of tags in image.

--- a/_sass/_session-marteau.scss
+++ b/_sass/_session-marteau.scss
@@ -8,3 +8,8 @@
 .navigation-menu {
     text-align: center;
 }
+
+.image-tags {
+  width: 100%;
+  text-align: center;
+}
